// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`genesReducer Deselecting all genes updates to empty list 1`] = `
Object {
  "expression": Object {
    "error": false,
    "loading": Array [],
    "matrix": ExpressionMatrix {
      "geneIndexes": Object {},
      "rawGeneExpressions": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
      "stats": Object {},
      "truncatedGeneExpressions": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
      "zScore": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
    },
    "views": Object {},
  },
  "focused": undefined,
  "markers": Object {
    "error": false,
    "loading": false,
  },
  "properties": Object {
    "data": Object {},
    "loading": Array [],
    "views": Object {},
  },
  "selected": Array [],
}
`;

exports[`genesReducer Deselecting non-selected genes is handled gracefully 1`] = `
Object {
  "expression": Object {
    "error": false,
    "loading": Array [],
    "matrix": ExpressionMatrix {
      "geneIndexes": Object {},
      "rawGeneExpressions": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
      "stats": Object {},
      "truncatedGeneExpressions": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
      "zScore": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
    },
    "views": Object {},
  },
  "focused": undefined,
  "markers": Object {
    "error": false,
    "loading": false,
  },
  "properties": Object {
    "data": Object {},
    "loading": Array [],
    "views": Object {},
  },
  "selected": Array [
    "a",
    "b",
    "d",
  ],
}
`;

exports[`genesReducer Deselecting part of all genes updates list as set 1`] = `
Object {
  "expression": Object {
    "error": false,
    "loading": Array [],
    "matrix": ExpressionMatrix {
      "geneIndexes": Object {},
      "rawGeneExpressions": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
      "stats": Object {},
      "truncatedGeneExpressions": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
      "zScore": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
    },
    "views": Object {},
  },
  "focused": undefined,
  "markers": Object {
    "error": false,
    "loading": false,
  },
  "properties": Object {
    "data": Object {},
    "loading": Array [],
    "views": Object {},
  },
  "selected": Array [
    "a",
    "d",
  ],
}
`;

exports[`genesReducer Error state handled appropriately 1`] = `
Object {
  "expression": Object {
    "error": false,
    "loading": Array [],
    "matrix": ExpressionMatrix {
      "geneIndexes": Object {},
      "rawGeneExpressions": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
      "stats": Object {},
      "truncatedGeneExpressions": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
      "zScore": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
    },
    "views": Object {},
  },
  "focused": undefined,
  "markers": Object {
    "error": false,
    "loading": false,
  },
  "properties": Object {
    "data": Object {},
    "loading": Array [],
    "views": Object {
      "asd": Object {
        "data": Array [],
        "error": "asd",
        "fetching": false,
      },
    },
  },
  "selected": Array [],
}
`;

exports[`genesReducer Expression loaded state handled appropriately when other things are still loading 1`] = `
Object {
  "expression": Object {
    "error": false,
    "loading": Array [
      "GENED",
      "GENEE",
    ],
    "matrix": ExpressionMatrix {
      "geneIndexes": Object {
        "GeneA": 0,
        "GeneB": 1,
        "GeneC": 2,
      },
      "rawGeneExpressions": Object {
        "datatype": undefined,
        "index": Array [
          0,
          0,
          2,
          0,
          2,
        ],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
          1,
          3,
          5,
        ],
        "size": Array [
          3,
          3,
        ],
        "values": Array [
          1,
          2,
          5,
          1,
          6,
        ],
      },
      "stats": Object {
        "GeneA": Object {
          "rawMean": 0.3,
          "rawStdev": 0.4,
          "truncatedMax": 1,
          "truncatedMin": 0,
        },
        "GeneB": Object {
          "rawMean": 2.3,
          "rawStdev": 2,
          "truncatedMax": 3,
          "truncatedMin": 2,
        },
        "GeneC": Object {
          "rawMean": 1.3,
          "rawStdev": 1,
          "truncatedMax": 5,
          "truncatedMin": 1,
        },
      },
      "truncatedGeneExpressions": Object {
        "datatype": undefined,
        "index": Array [
          0,
          0,
          2,
          0,
          2,
        ],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
          1,
          3,
          5,
        ],
        "size": Array [
          3,
          3,
        ],
        "values": Array [
          1,
          2,
          3,
          0.5,
          1,
        ],
      },
      "zScore": Object {
        "datatype": undefined,
        "index": Array [
          0,
          0,
          2,
          0,
          2,
        ],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
          1,
          3,
          5,
        ],
        "size": Array [
          3,
          3,
        ],
        "values": Array [
          1,
          1,
          3,
          3,
          1,
        ],
      },
    },
    "views": Object {
      "asd": Object {
        "data": Array [
          "geneA",
          "geneB",
          "geneC",
        ],
        "error": false,
        "fetching": false,
      },
    },
  },
  "focused": undefined,
  "markers": Object {
    "error": false,
    "loading": false,
  },
  "properties": Object {
    "data": Object {},
    "loading": Array [],
    "views": Object {},
  },
  "selected": Array [],
}
`;

exports[`genesReducer Loaded paginated state handled appropriately 1`] = `
Object {
  "expression": Object {
    "error": false,
    "loading": Array [],
    "matrix": ExpressionMatrix {
      "geneIndexes": Object {},
      "rawGeneExpressions": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
      "stats": Object {},
      "truncatedGeneExpressions": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
      "zScore": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
    },
    "views": Object {},
  },
  "focused": undefined,
  "markers": Object {
    "error": false,
    "loading": false,
  },
  "properties": Object {
    "data": Object {
      "gene1": Object {
        "a": 5,
        "b": 6,
        "c": 7,
      },
      "gene2": Object {
        "a": 7,
        "b": 8,
        "c": 9,
      },
    },
    "loading": Array [],
    "views": Object {
      "asd": Object {
        "data": Array [
          "gene1",
          "gene2",
        ],
        "error": false,
        "fetching": false,
        "total": undefined,
      },
    },
  },
  "selected": Array [],
}
`;

exports[`genesReducer Loaded paginated state handled appropriately when other things are still loading 1`] = `
Object {
  "expression": Object {
    "error": false,
    "loading": Array [],
    "matrix": ExpressionMatrix {
      "geneIndexes": Object {},
      "rawGeneExpressions": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
      "stats": Object {},
      "truncatedGeneExpressions": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
      "zScore": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
    },
    "views": Object {},
  },
  "focused": undefined,
  "markers": Object {
    "error": false,
    "loading": false,
  },
  "properties": Object {
    "data": Object {
      "gene1": Object {
        "a": 5,
        "b": 6,
        "c": 7,
      },
      "gene2": Object {
        "a": 7,
        "b": 8,
        "c": 9,
      },
    },
    "loading": Array [
      "d",
      "e",
    ],
    "views": Object {
      "asd": Object {
        "data": Array [
          "gene1",
          "gene2",
        ],
        "error": false,
        "fetching": false,
        "total": undefined,
      },
    },
  },
  "selected": Array [],
}
`;

exports[`genesReducer Loading on error state causes error to reset 1`] = `
Object {
  "expression": Object {
    "error": false,
    "loading": Array [],
    "matrix": ExpressionMatrix {
      "geneIndexes": Object {},
      "rawGeneExpressions": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
      "stats": Object {},
      "truncatedGeneExpressions": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
      "zScore": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
    },
    "views": Object {},
  },
  "focused": undefined,
  "markers": Object {
    "error": false,
    "loading": false,
  },
  "properties": Object {
    "data": Object {},
    "loading": Array [
      "a",
      "b",
    ],
    "views": Object {
      "asd": Object {
        "data": Array [],
        "error": false,
        "fetching": true,
      },
    },
  },
  "selected": Array [],
}
`;

exports[`genesReducer Multiple components loading some of same expression triggers appropriate action 1`] = `
Object {
  "expression": Object {
    "error": false,
    "loading": Array [
      "a",
      "b",
      "c",
    ],
    "matrix": ExpressionMatrix {
      "geneIndexes": Object {},
      "rawGeneExpressions": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
      "stats": Object {},
      "truncatedGeneExpressions": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
      "zScore": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
    },
    "views": Object {
      "abc": Object {
        "data": Array [],
        "error": false,
        "fetching": true,
      },
      "def": Object {
        "data": Array [],
        "error": false,
        "fetching": true,
      },
    },
  },
  "focused": undefined,
  "markers": Object {
    "error": false,
    "loading": false,
  },
  "properties": Object {
    "data": Object {},
    "loading": Array [],
    "views": Object {},
  },
  "selected": Array [],
}
`;

exports[`genesReducer Multiple components loading some of same property triggers appropriate action 1`] = `
Object {
  "expression": Object {
    "error": false,
    "loading": Array [],
    "matrix": ExpressionMatrix {
      "geneIndexes": Object {},
      "rawGeneExpressions": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
      "stats": Object {},
      "truncatedGeneExpressions": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
      "zScore": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
    },
    "views": Object {},
  },
  "focused": undefined,
  "markers": Object {
    "error": false,
    "loading": false,
  },
  "properties": Object {
    "data": Object {},
    "loading": Array [
      "a",
      "b",
      "c",
    ],
    "views": Object {
      "asd": Object {
        "data": Array [],
        "error": false,
        "fetching": true,
      },
      "asdf": Object {
        "data": Array [],
        "error": false,
        "fetching": true,
      },
    },
  },
  "selected": Array [],
}
`;

exports[`genesReducer Properties loading triggers appropriate changes 1`] = `
Object {
  "expression": Object {
    "error": false,
    "loading": Array [],
    "matrix": ExpressionMatrix {
      "geneIndexes": Object {},
      "rawGeneExpressions": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
      "stats": Object {},
      "truncatedGeneExpressions": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
      "zScore": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
    },
    "views": Object {},
  },
  "focused": undefined,
  "markers": Object {
    "error": false,
    "loading": false,
  },
  "properties": Object {
    "data": Object {},
    "loading": Array [
      "a",
      "b",
    ],
    "views": Object {
      "asd": Object {
        "data": Array [],
        "error": false,
        "fetching": true,
      },
    },
  },
  "selected": Array [],
}
`;

exports[`genesReducer Selected genes get added as a set to a non-empty list 1`] = `
Object {
  "expression": Object {
    "error": false,
    "loading": Array [],
    "matrix": ExpressionMatrix {
      "geneIndexes": Object {},
      "rawGeneExpressions": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
      "stats": Object {},
      "truncatedGeneExpressions": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
      "zScore": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
    },
    "views": Object {},
  },
  "focused": undefined,
  "markers": Object {
    "error": false,
    "loading": false,
  },
  "properties": Object {
    "data": Object {},
    "loading": Array [],
    "views": Object {},
  },
  "selected": Array [
    "a",
    "b",
    "d",
  ],
}
`;

exports[`genesReducer Selected genes get added on empty list 1`] = `
Object {
  "expression": Object {
    "error": false,
    "loading": Array [],
    "matrix": ExpressionMatrix {
      "geneIndexes": Object {},
      "rawGeneExpressions": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
      "stats": Object {},
      "truncatedGeneExpressions": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
      "zScore": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
    },
    "views": Object {},
  },
  "focused": undefined,
  "markers": Object {
    "error": false,
    "loading": false,
  },
  "properties": Object {
    "data": Object {},
    "loading": Array [],
    "views": Object {},
  },
  "selected": Array [
    "a",
    "b",
    "c",
  ],
}
`;

exports[`genesReducer Sets error state on expression error action 1`] = `
Object {
  "expression": Object {
    "error": "asd",
    "loading": Array [],
    "matrix": ExpressionMatrix {
      "geneIndexes": Object {},
      "rawGeneExpressions": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
      "stats": Object {},
      "truncatedGeneExpressions": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
      "zScore": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
    },
    "views": Object {
      "abc": Object {
        "data": Array [],
        "error": "asd",
        "fetching": false,
      },
    },
  },
  "focused": undefined,
  "markers": Object {
    "error": false,
    "loading": false,
  },
  "properties": Object {
    "data": Object {},
    "loading": Array [],
    "views": Object {},
  },
  "selected": Array [],
}
`;

exports[`genesReducer Sets loaded state on expression loading action 1`] = `
Object {
  "expression": Object {
    "error": false,
    "loading": Array [],
    "matrix": ExpressionMatrix {
      "geneIndexes": Object {
        "Gzma": 0,
        "Lyz2": 1,
      },
      "rawGeneExpressions": Object {
        "datatype": undefined,
        "index": Array [
          0,
          0,
          2,
        ],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
          1,
          3,
        ],
        "size": Array [
          3,
          2,
        ],
        "values": Array [
          1,
          2,
          5,
        ],
      },
      "stats": Object {
        "Gzma": Object {
          "rawMean": 0.3,
          "rawStdev": 0.4,
          "truncatedMax": 1,
          "truncatedMin": 0,
        },
        "Lyz2": Object {
          "rawMean": 2.3,
          "rawStdev": 2,
          "truncatedMax": 3,
          "truncatedMin": 2,
        },
      },
      "truncatedGeneExpressions": Object {
        "datatype": undefined,
        "index": Array [
          0,
          0,
          2,
        ],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
          1,
          3,
        ],
        "size": Array [
          3,
          2,
        ],
        "values": Array [
          1,
          2,
          3,
        ],
      },
      "zScore": Object {
        "datatype": undefined,
        "index": Array [
          0,
          0,
          2,
        ],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
          1,
          3,
        ],
        "size": Array [
          3,
          2,
        ],
        "values": Array [
          1,
          1,
          3,
        ],
      },
    },
    "views": Object {
      "abc": Object {
        "data": Array [
          "Gzma",
          "Lyz2",
        ],
        "error": false,
        "fetching": false,
      },
    },
  },
  "focused": undefined,
  "markers": Object {
    "error": false,
    "loading": false,
  },
  "properties": Object {
    "data": Object {},
    "loading": Array [],
    "views": Object {},
  },
  "selected": Array [],
}
`;

exports[`genesReducer Sets loading state on expression loading action 1`] = `
Object {
  "expression": Object {
    "error": false,
    "loading": Array [
      "A",
      "B",
      "C",
    ],
    "matrix": ExpressionMatrix {
      "geneIndexes": Object {},
      "rawGeneExpressions": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
      "stats": Object {},
      "truncatedGeneExpressions": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
      "zScore": Object {
        "datatype": undefined,
        "index": Array [],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
        ],
        "size": Array [
          0,
          0,
        ],
        "values": Array [],
      },
    },
    "views": Object {
      "abc": Object {
        "data": Array [],
        "error": false,
        "fetching": true,
      },
    },
  },
  "focused": undefined,
  "markers": Object {
    "error": false,
    "loading": false,
  },
  "properties": Object {
    "data": Object {},
    "loading": Array [],
    "views": Object {},
  },
  "selected": Array [],
}
`;
